fixed scroll on mobile devices

--- a/src/assets/styles/home/screen9.scss
+++ b/src/assets/styles/home/screen9.scss
@@ -1,6 +1,6 @@
 .screen9 { 
     position: relative;
-    min-height: 100vh;
+    min-height: 100svh;
     --v-padding: 280px;
     // overflow: hidden;
     @include row-flex();
