--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -22,7 +22,8 @@
     height: var(--app-height);
   }
   @include to(575px) {
-    height: var(--app-height);
+    // height: var(--app-height);
+    height: 100svh;
     --top-offset: calc(45px + var(--header-h));
     display: flex;
     align-items: flex-end;
@@ -33,7 +34,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: var(--app-height);
+    // height: var(--app-height);
+    height: 100svh;
     &::after {
       content: '';
       position: absolute;
@@ -1200,6 +1202,7 @@
   }
   img {
     margin-top: 0;
+    aspect-ratio: 1 / 1;
   }
 }
 
